HW7 updated